# tracelines

./: .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DATA_LICENSES.md  Dockerfile  README.md  RESEARCH-REPORT.md  SECURITY.md  THIRD_PARTY_LICENSES.md  function.py  mkdocs.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  nightly-canary.yml  pages.yml  release.yml
docs/: api.md  architecture.md  changelog.md  concepts.md  contributing.md  data-provenance.md  eli5.md  findings.md  gui.md  index.md  methodology.md  output-schema.md  quickstart.md  verification.md
docs/evidence/: coverage-manifest.csv  coverage-summary.csv
docs/schema/: coverage.schema.json
examples/: demo_nearest.py
npm/: README.md  package.json
scripts/: verify_hardrule.py
server/: README.md  app.py
spaces/: Dockerfile  README.md
svcoverage/: __init__.py  cli.py  config.py  nearest.py  pipeline.py
svcoverage/providers/: base.py  kartaview.py  mapillary.py
tests/: test_cli_and_infra.py  test_export.py  test_fuse.py  test_kartaview.py  test_mapillary.py  test_models.py  test_nearest.py  test_pipeline.py  test_probe.py  test_providers.py  test_stitch.py  test_tiles.py
tracelines/: __init__.py  cache.py  cli.py  config.py  export.py  fuse.py  models.py  nearest.py  pipeline.py  probe.py  proxy.py  stitch.py  tiles.py
tracelines/providers/: __init__.py  google_sl.py  kartaview.py
web/: app.css  app.js  index.html
web/samples/: bucharest-sample.geojson
