[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "svcoverage"
version = "0.1.0"
description = "Extract continuous street-level 'blue line' coverage (Google/Mapillary/KartaView) as GeoJSON — official car Street View only, never photospheres."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "THIRD_PARTY_LICENSES.md"]
authors = [{ name = "Prekzursil" }]
keywords = [
    "street-view", "streetlevel", "mapillary", "kartaview", "coverage",
    "geojson", "gis", "openstreetmap", "panorama", "reverse-engineering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# Base install is Google-capable out of the box (streetlevel needs no API key).
dependencies = [
    "shapely>=2.0",
    "networkx>=3.0",
    "aiohttp>=3.9",
    "streetlevel>=0.12,<0.13",
    "diskcache>=5.6",
]

[project.optional-dependencies]
mapillary = ["mapbox-vector-tile>=2.0"]           # Mapillary sequence vector-tile decode
snap = ["osmnx>=1.9", "geopandas>=0.14", "pyproj>=3.6"]  # optional OSM road-snapping
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]    # self-hostable proxy backend
all = ["mapbox-vector-tile>=2.0", "osmnx>=1.9", "geopandas>=0.14", "pyproj>=3.6"]
dev = [
    "pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.10",
    "mercantile>=1.2", "mapbox-vector-tile>=2.0",
    "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25", "pymdown-extensions>=10",
]

[project.urls]
Homepage = "https://prekzursil.github.io/svcoverage/"
Documentation = "https://prekzursil.github.io/svcoverage/docs/"
Repository = "https://github.com/Prekzursil/svcoverage"
Issues = "https://github.com/Prekzursil/svcoverage/issues"

[project.scripts]
svcoverage = "svcoverage.cli:main"

[tool.setuptools.packages.find]
include = ["svcoverage*"]

[tool.setuptools.package-data]
svcoverage = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "network: hits live external endpoints (Google/Mapillary/KartaView); skipped by default",
]
addopts = "-m 'not network' -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
